src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
.label.label {
  background-color: var(--near-black);
  color: var(--primary);
  order: 99;
  position: absolute;
  bottom: 5px;
  left: 5px;
  right: 3px;
  text-align: center;
  border: 1px black solid;
  border-radius: 5px;
  z-index: 100;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: 550;
}

.countersCover.countersCover {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  inset: 0;
  z-index: 2;
  cursor: default;
}

.number.number {
  border-radius: 100%;
  border-style: solid;
  border-color: black;
  border-width: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  max-height: 1.75em;
  min-height: 1em;
  width: 50%;
  max-width: 1.75em;
  min-width: 1.25em;
  font-size: 1.5em;
  background-color: var(--white);
  text-align: center;
  cursor: default;
}

.defCounter.defCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-defence.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.steamCounter.steamCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-steamCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.energyCounter.energyCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-energyCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.hauntCounter.hauntCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-hauntCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.verseCounter.verseCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-verseCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.doomCounter.doomCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-doomCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.lessonCounter.lessonCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-lessonCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.rustCounter.rustCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-rustCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.flowCounter.flowCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-flowCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.frostCounter.frostCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-frostCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.balanceCounter.balanceCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-balanceCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.bindCounter.bindCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-bindCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.stainCounter.stainCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-stainCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.attackCounter.attackCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-attack.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
}

.lifeCounter.lifeCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-health.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  cursor: default;
}

[data-tooltip]::before {
  text-shadow: none;
}

.aimCounter.aimCounter {
  border-radius: 100%;
  height: 1em;
  width: 1em;
  background-image: url('../../../../../img/symbols/symbol-aim.png');
  background-position: center;
  background-size: contain;
  border: none;
  cursor: default;
}

.facing {
  height: 1.75em;
  width: 1.75em;
  background-position: center;
  background-size: contain;
}

.facingUp {
  background-image: url('../../../../../img/symbols/symbol-faceUp.png');
}

.facingDown {
  background-image: url('../../../../../img/symbols/symbol-faceDown.png');
}

.text {
  color: black;
}

.floatCover {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
  inset: 0;
  z-index: 2;
  pointer-events: none;
}

.icon.icon {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.8);
  border: var(--primary) solid 1px;
  color: var(--white);
  border-radius: 5px;
  min-width: 1.5em;
  height: 1.5em;
  font-size: 1.75em;
  padding: 2px;
  margin: 0.1em;
  pointer-events: auto;
  user-select: none;
  cursor: default;
}

.iconText {
  padding: 2px;
}

.iconTextCombatChain {
  padding: 2px;
  padding-bottom: 5px;
}

.iconEffects{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.8);
  border: var(--primary) solid 1px;
  color: var(--white);
  border-radius: 5px;
  min-width: 1.5em;
  height: 1.5em;
  font-size: 1.5em;
  padding: 2px;
  margin: 0.1em;
  pointer-events: auto;
  user-select: none;
  cursor: default;
}

.iconTextEffect{
  padding: 2px;
}

